--- a/html-css-2/style-2.css
+++ b/html-css-2/style-2.css
@@ -58,7 +58,7 @@ h2{
     border: 1px solid black;
 }
 .box2-container{
-    height: 400px;
+    height: 343px;
     padding-left: 12px;
     width: 100%;
 }
@@ -70,7 +70,6 @@ h2{
 .snowman-container{
     height: 100%;
     width: 125px;
-    /* border: 1px solid green; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -116,4 +115,57 @@ h2{
     width: 110px;
     border: 1px solid black;
     border-radius: 50%;
+}
+.box3-container{
+    height: 300px;
+    padding-left: 12px;
+    width: 100%;
+}
+.box3{
+    height: 195px;
+    width: 96%;
+    border: 1px dashed gray;
+}
+.box3 .square{
+    height: 177px;
+    width: 182px;
+    margin-top: 7px;
+    margin-left: 7px;
+    background-color: #f5f4de;
+    border: 2px solid #afafaf;
+}
+.box3 .green-circle{
+    height: 148px;
+    width: 148px;
+    border-radius: 50%;
+    border: 1px solid black;
+    background-color: green;
+}
+.box3 .brown-square{
+    height: 95px;
+    width: 95px;
+    background-color: brown;
+    margin: 0 auto;
+    margin-top: 24px;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+p{
+    font-size: 12px;
+    color: lightgray;
+    margin-top: -1px;
+    margin-left: 25px;
+}
+.box3 .blue-circle{
+    height: 78px;
+    width: 78px;
+    background-color: blue;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.fish-img{
+    height: 22px;
 }
